fix jumping button

--- a/src/components/WaterCard/WaterCard.module.css
+++ b/src/components/WaterCard/WaterCard.module.css
@@ -3,7 +3,7 @@
   height: 74px;
   display: flex;
   align-items: center;
-  gap: 10px;
+  /* gap: 10px; */
   background-color: var(--color-white);
   color: var(--color-darkblue);
   border-radius: 15px;
@@ -31,6 +31,8 @@
   flex-direction: column;
   align-items: center;
   gap: 6px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .volume {
@@ -84,7 +86,7 @@
     width: 190px;
     height: 86px;
     padding: 20px;
-    gap: 20px;
+    /* gap: 20px; */
     padding-left: 0;
   }
 
@@ -97,6 +99,8 @@
   .cardInfo {
     width: 62px;
     height: 46px;
+    margin-left: 20px;
+    margin-right: 20px;
   }
 
   .volume {
